--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,11 @@
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "files.exclude": {
-    "**/node_modules/": true,
-    "**/build/": true,
-    "**/Build/": true,
-    "**/сборка/": true,
-    "**/Сборка/": true,
+    // "**/node_modules/": true,
+    // "**/build/": true,
+    // "**/Build/": true,
+    // "**/сборка/": true,
+    // "**/Сборка/": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
@@ -17,13 +17,8 @@
     "**/Сборка/": true,
   },
   "cSpell.ignorePaths": [
-    "node_modules",
-    "**/node_modules",
-    "**/node_modules/**",
-    "node_modules/**",
-    "vscode-extension",
     ".git",
-    "CODE_OF_CONDUCT.md",
+    "**/node_modules/**",
     "package-lock.json",
     "yarn.lock",
   ],
