--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "url": "https://github.com/nezaboodka/artel-verstak-demo.git"
   },
   "scripts": {
-    "упаковать": "артель упаковать исходники/приложение сборка"
+    "пуск": "артель пуск исходники/приложение сборка",
+    "упаковать": "артель упаковать исходники/приложение сборка",
+    "настроить": "артель настроить"
   },
   "dependencies": {
   },
