--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/nezaboodka/artel-verstak-demo.git"
   },
   "scripts": {
-    "пуск": "артель пуск исходники/приложение сборка",
-    "упаковать": "артель упаковать исходники/приложение сборка",
+    "пуск": "артель пуск исходники/приложение .сборка",
+    "упаковать": "артель упаковать исходники/приложение .сборка",
     "настроить": "артель настроить"
   },
   "dependencies": {
