--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "url": "https://github.com/nezaboodka/artel-verstak-demo.git"
   },
   "scripts": {
-    "пуск": "артель пуск исходники/приложение .сборка",
-    "упаковать": "артель упаковать исходники/приложение .сборка",
-    "настроить": "артель настроить"
+    "пуск": "артель пуск моя-программа .сборка",
+    "упаковать": "артель упаковать моя-программа .сборка",
+    "настроить": "npm install"
   },
   "dependencies": {
   },
