--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
       "request": "launch",
       "preLaunchTask": "Install node modules automatically",
       "program": "${workspaceFolder}/node_modules/artel/build/art.js",
+      "internalConsoleOptions": "openOnFirstSessionStart",
       "args": [
         "пуск",
         "${relativeFileDirname}",
