--- a/package.json
+++ b/package.json
@@ -1,33 +1,12 @@
 {
-  "name": "artel-verstak-demo",
-  "version": "0.1.0",
-  "description": "Artel Verstak Demo",
-  "license": "Apache-2.0",
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nezaboodka/artel-verstak-demo.git"
-  },
+  "name": "my-first-program-in-artel-language",
+  "description": "Моя первая программа на языке Артель",
   "scripts": {
     "пуск": "артель пуск моя-программа .сборка",
     "упаковать": "артель упаковать моя-программа .сборка",
     "настроить": "npm install"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "artel": "0.4.191"
-  },
-  "browserslist": {
-    "production": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
