--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-first-program-in-artel-language",
-  "description": "Моя первая программа на языке Артель",
+  "name": "artel-first-program",
+  "description": "Первая программа на языке Артель",
   "scripts": {
     "пуск": "артель пуск моя-программа .сборка",
     "упаковать": "артель упаковать моя-программа .сборка",
