--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "artel-first-program",
   "description": "Первая программа на языке Артель",
+  "devDependencies": { "artel": "0.4.191" },
   "scripts": {
     "пуск": "артель пуск моя-программа .сборка",
     "упаковать": "артель упаковать моя-программа .сборка",
     "настроить": "npm install"
-  },
-  "devDependencies": {
-    "artel": "0.4.191"
   }
 }
