--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,10 @@
       "name": "Запуск",
       "type": "node",
       "request": "launch",
-      "preLaunchTask": "Install node modules automatically",
-      "program": "${workspaceFolder}/node_modules/artel/build/art.js",
-      "internalConsoleOptions": "openOnFirstSessionStart",
+      "program": "${workspaceFolder}/.vscode/artel-launcher.js",
+      "runtimeArgs": [
+        // "--inspect"
+      ],
       "args": [
         "пуск",
         "${relativeFileDirname}",
