--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "Первая программа на языке Артель",
   "devDependencies": { "artel": "0.4.192" },
   "scripts": {
-    "пуск": "артель пуск моя-программа .сборка",
-    "упаковать": "артель упаковать моя-программа .сборка",
+    "пуск": "node @ пуск моя-программа .сборка",
+    "упаковать": "node @ упаковать моя-программа .сборка",
     "настроить": "npm install"
   }
 }
