--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": { "artel": "0.4.195" },
   "scripts": {
     "пуск": "node artel@npm пуск моя-программа .сборка",
-    "упаковать": "node artel@npm упаковать моя-программа .сборка",
+    "собрать": "node artel@npm собрать моя-программа .сборка",
     "настроить": "npm install"
   }
 }
