--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,20 +2,20 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Запустить без отладки - артель пуск ...",
+      "label": "Запустить без отладки (артель пуск)",
       "type": "shell",
       "command": "node artel@npm.js пуск моя-программа .сборка",
       "group": "build",
       "problemMatcher": []
     },
     {
-      "label": "Собрать проект - артель собрать ...",
+      "label": "Собрать проект (артель собрать)",
       "type": "shell",
       "command": "node artel@npm.js собрать моя-программа .сборка",
       "group": "build",
     },
     {
-      "label": "Настроить проект - артель настроить ...",
+      "label": "Настроить проект (артель настроить)",
       "type": "shell",
       "command": "npm install --no-fund",
       "group": "build",
