--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,19 +5,35 @@
     // "**/node_modules/": true,
     // "**/build/": true,
     // "**/Build/": true,
+    // "**/.build/": true,
+    // "**/.Build/": true,
     // "**/сборка/": true,
     // "**/Сборка/": true,
+    // "**/.сборка/": true,
+    // "**/.Сборка/": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
     "**/build/": true,
     "**/Build/": true,
+    "**/.build/": true,
+    "**/.Build/": true,
     "**/сборка/": true,
     "**/Сборка/": true,
+    "**/.сборка/": true,
+    "**/.Сборка/": true,
   },
   "cSpell.ignorePaths": [
     ".git",
     "**/node_modules/**",
+    "**/build/**",
+    "**/Build/**",
+    "**/.build/**",
+    "**/.Build/**",
+    "**/сборка/**",
+    "**/Сборка/**",
+    "**/.сборка/**",
+    "**/.Сборка/**",
     "package-lock.json",
     "yarn.lock",
   ],
