--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,14 @@
     // "**/Build/": true,
     // "**/.build/": true,
     // "**/.Build/": true,
+    // "**/!build/": true,
+    // "**/!Build/": true,
     // "**/сборка/": true,
     // "**/Сборка/": true,
     // "**/.сборка/": true,
     // "**/.Сборка/": true,
+    // "**/!сборка/": true,
+    // "**/!Сборка/": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
@@ -18,10 +22,14 @@
     "**/Build/": true,
     "**/.build/": true,
     "**/.Build/": true,
+    "**/!build/": true,
+    "**/!Build/": true,
     "**/сборка/": true,
     "**/Сборка/": true,
     "**/.сборка/": true,
     "**/.Сборка/": true,
+    "**/!сборка/": true,
+    "**/!Сборка/": true,
   },
   "cSpell.ignorePaths": [
     ".git",
@@ -30,10 +38,14 @@
     "**/Build/**",
     "**/.build/**",
     "**/.Build/**",
+    "**/!build/**",
+    "**/!Build/**",
     "**/сборка/**",
     "**/Сборка/**",
     "**/.сборка/**",
     "**/.Сборка/**",
+    "**/!сборка/**",
+    "**/!Сборка/**",
     "package-lock.json",
     "yarn.lock",
   ],
