--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts":
   {
-    "пуск": "node n-artel пуск моя-программа !сборка",
-    "собрать": "node n-artel собрать моя-программа !сборка",
+    "пуск": "node n-artel пуск моя-программа .сборка",
+    "собрать": "node n-artel собрать моя-программа .сборка",
     "настроить": "npm install"
   }
 }
