--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,37 +3,37 @@
   "editor.insertSpaces": true,
   "files.exclude": {
     // "**/node_modules/": true,
-    // "**/build/": true,
-    // "**/Build/": true,
-    // "**/.build/": true,
-    // "**/.Build/": true,
-    // "**/сборка/": true,
-    // "**/Сборка/": true,
-    // "**/.сборка/": true,
-    // "**/.Сборка/": true,
+    // "**/build/package": true,
+    // "**/Build/package": true,
+    // "**/.build/package": true,
+    // "**/.Build/package": true,
+    // "**/сборка/package": true,
+    // "**/Сборка/package": true,
+    // "**/.сборка/package": true,
+    // "**/.Сборка/package": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
-    "**/build/": true,
-    "**/Build/": true,
-    "**/.build/": true,
-    "**/.Build/": true,
-    "**/сборка/": true,
-    "**/Сборка/": true,
-    "**/.сборка/": true,
-    "**/.Сборка/": true,
+    "**/build/package": true,
+    "**/Build/package": true,
+    "**/.build/package": true,
+    "**/.Build/package": true,
+    "**/сборка/package": true,
+    "**/Сборка/package": true,
+    "**/.сборка/package": true,
+    "**/.Сборка/package": true,
   },
   "cSpell.ignorePaths": [
     ".git",
     "**/node_modules/**",
-    "**/build/**",
-    "**/Build/**",
-    "**/.build/**",
-    "**/.Build/**",
-    "**/сборка/**",
-    "**/Сборка/**",
-    "**/.сборка/**",
-    "**/.Сборка/**",
+    "**/build/package/**",
+    "**/Build/package/**",
+    "**/.build/package/**",
+    "**/.Build/package/**",
+    "**/сборка/package/**",
+    "**/Сборка/package/**",
+    "**/.сборка/package/**",
+    "**/.Сборка/package/**",
     "package-lock.json",
     "yarn.lock",
   ],
