--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,22 +3,31 @@
   "tasks": [
     {
       "label": "Запустить без отладки (артель пуск)",
-      "type": "shell",
-      "command": "node n-artel.js пуск моя-программа .сборка",
       "group": "build",
+      "type": "shell",
+      "command": "node n-artel.js пуск ../МояПрограмма ./package/МояПрограмма",
+      "options": {
+        "cwd": ".сборка"
+      },
       "problemMatcher": []
     },
     {
       "label": "Собрать проект (артель собрать)",
-      "type": "shell",
-      "command": "node n-artel.js собрать моя-программа .сборка",
       "group": "build",
+      "type": "shell",
+      "command": "node n-artel.js собрать ../МояПрограмма ./package/МояПрограмма",
+      "options": {
+        "cwd": ".сборка"
+      },
     },
     {
       "label": "Настроить проект (артель настроить)",
+      "group": "build",
       "type": "shell",
       "command": "npm install --no-fund",
-      "group": "build",
+      "options": {
+        "cwd": ".сборка"
+      },
     },
   ]
 }
