--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,37 +3,37 @@
   "editor.insertSpaces": true,
   "files.exclude": {
     // "**/node_modules/": true,
-    // "**/build/package": true,
-    // "**/Build/package": true,
-    // "**/.build/package": true,
-    // "**/.Build/package": true,
-    // "**/сборка/package": true,
-    // "**/Сборка/package": true,
-    // "**/.сборка/package": true,
-    // "**/.Сборка/package": true,
+    // "**/build/executable": true,
+    // "**/Build/executable": true,
+    // "**/.build/executable": true,
+    // "**/.Build/executable": true,
+    // "**/сборка/executable": true,
+    // "**/Сборка/executable": true,
+    // "**/.сборка/executable": true,
+    // "**/.Сборка/executable": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
-    "**/build/package": true,
-    "**/Build/package": true,
-    "**/.build/package": true,
-    "**/.Build/package": true,
-    "**/сборка/package": true,
-    "**/Сборка/package": true,
-    "**/.сборка/package": true,
-    "**/.Сборка/package": true,
+    "**/build/executable": true,
+    "**/Build/executable": true,
+    "**/.build/executable": true,
+    "**/.Build/executable": true,
+    "**/сборка/executable": true,
+    "**/Сборка/executable": true,
+    "**/.сборка/executable": true,
+    "**/.Сборка/executable": true,
   },
   "cSpell.ignorePaths": [
     ".git",
     "**/node_modules/**",
-    "**/build/package/**",
-    "**/Build/package/**",
-    "**/.build/package/**",
-    "**/.Build/package/**",
-    "**/сборка/package/**",
-    "**/Сборка/package/**",
-    "**/.сборка/package/**",
-    "**/.Сборка/package/**",
+    "**/build/executable/**",
+    "**/Build/executable/**",
+    "**/.build/executable/**",
+    "**/.Build/executable/**",
+    "**/сборка/executable/**",
+    "**/Сборка/executable/**",
+    "**/.сборка/executable/**",
+    "**/.Сборка/executable/**",
     "package-lock.json",
     "yarn.lock",
   ],
