--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,37 +3,37 @@
   "editor.insertSpaces": true,
   "files.exclude": {
     // "**/node_modules/": true,
-    // "**/build/executable": true,
-    // "**/Build/executable": true,
-    // "**/.build/executable": true,
-    // "**/.Build/executable": true,
-    // "**/сборка/executable": true,
-    // "**/Сборка/executable": true,
-    // "**/.сборка/executable": true,
-    // "**/.Сборка/executable": true,
+    // "**/build/Executable": true,
+    // "**/Build/Executable": true,
+    // "**/.build/Executable": true,
+    // "**/.Build/Executable": true,
+    // "**/сборка/Executable": true,
+    // "**/Сборка/Executable": true,
+    // "**/.сборка/Executable": true,
+    // "**/.Сборка/Executable": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
-    "**/build/executable": true,
-    "**/Build/executable": true,
-    "**/.build/executable": true,
-    "**/.Build/executable": true,
-    "**/сборка/executable": true,
-    "**/Сборка/executable": true,
-    "**/.сборка/executable": true,
-    "**/.Сборка/executable": true,
+    "**/build/Executable": true,
+    "**/Build/Executable": true,
+    "**/.build/Executable": true,
+    "**/.Build/Executable": true,
+    "**/сборка/Executable": true,
+    "**/Сборка/Executable": true,
+    "**/.сборка/Executable": true,
+    "**/.Сборка/Executable": true,
   },
   "cSpell.ignorePaths": [
     ".git",
     "**/node_modules/**",
-    "**/build/executable/**",
-    "**/Build/executable/**",
-    "**/.build/executable/**",
-    "**/.Build/executable/**",
-    "**/сборка/executable/**",
-    "**/Сборка/executable/**",
-    "**/.сборка/executable/**",
-    "**/.Сборка/executable/**",
+    "**/build/Executable/**",
+    "**/Build/Executable/**",
+    "**/.build/Executable/**",
+    "**/.Build/Executable/**",
+    "**/сборка/Executable/**",
+    "**/Сборка/Executable/**",
+    "**/.сборка/Executable/**",
+    "**/.Сборка/Executable/**",
     "package-lock.json",
     "yarn.lock",
   ],
