--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "label": "Запустить без отладки (артель пуск)",
       "group": "build",
       "type": "shell",
-      "command": "node n-artel.js пуск .. ./Executable",
+      "command": "node n-artel.js launch .. ./Executable",
       "options": {
         "cwd": ".сборка"
       },
@@ -15,7 +15,7 @@
       "label": "Собрать проект (артель собрать)",
       "group": "build",
       "type": "shell",
-      "command": "node n-artel.js собрать .. ./Executable",
+      "command": "node n-artel.js build .. ./Executable",
       "options": {
         "cwd": ".сборка"
       },
