--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,7 @@
       },
     },
     {
-      "label": "Настроить проект (артель настроить)",
+      "label": "Скачать пакеты (артель скачать-пакеты)",
       "group": "build",
       "type": "shell",
       "command": "npm install --no-fund",
